# lightroom-2-darktable

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  notebook.ipynb  pyproject.toml  stuff.sql
.github/workflows/: commitlint.yml  pr.yaml
src/lightroom_2_darktable/: __about__.py  __init__.py  console.py  files.py  lists.py  table_utils.py
src/lightroom_2_darktable/cli/: __init__.py
tests/: conftest.py
tests/lightroom-2-darktable/: sanity_test.py
tests/lightroom_2_darktable/: lists_test.py  table_utils_test.py
