[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lightroom-2-darktable"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "Chris Butler", email = "chris@thebutlers.me" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "typer",
  "rich",
  "ray[all]",
  "modin",
]

[project.urls]
Documentation = "https://github.com/butler54/lightroom-2-darktable#readme"
Issues = "https://github.com/butler54/lightroom-2-darktable/issues"
Source = "https://github.com/butler54/lightroom-2-darktable"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0",
]
[tool.hatch.version]
path = "src/lightroom_2_darktable/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/lightroom_2_darktable tests}"

[tool.coverage.run]
source_pkgs = ["lightroom_2_darktable", "tests"]
branch = true
parallel = true
omit = [
  "src/lightroom_2_darktable/__about__.py",
]

[tool.coverage.paths]
lightroom_2_darktable = ["src/lightroom_2_darktable", "*/lightroom-2-darktable/src/lightroom_2_darktable"]
tests = ["tests", "*/lightroom-2-darktable/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff.lint]
preview = true

[tool.ruff.format]
preview = true