[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lightroom-2-darktable"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "Chris Butler", email = "chris@thebutlers.me" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "typer",
  "rich",
  "ray >= 2.44",
  "modin",
  "setuptools",

]


[project.urls]
Documentation = "https://github.com/butler54/lightroom-2-darktable#readme"
Issues = "https://github.com/butler54/lightroom-2-darktable/issues"
Source = "https://github.com/butler54/lightroom-2-darktable"

[project.scripts]
l2d = "lightroom_2_darktable.cli:cli"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0",
]
[tool.hatch.version]
path = "src/lightroom_2_darktable/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/lightroom_2_darktable tests}"

[tool.coverage.run]
source_pkgs = ["lightroom_2_darktable", "tests"]
branch = true
parallel = true
omit = [
  "src/lightroom_2_darktable/__about__.py",
]

[tool.hatch.envs.default]
python = "3.12"

[tool.coverage.paths]
lightroom_2_darktable = ["src/lightroom_2_darktable", "*/lightroom-2-darktable/src/lightroom_2_darktable"]
tests = ["tests", "*/lightroom-2-darktable/tests"]

[tool.hatch.envs.cli]
dependencies = [
  "typer",           # for testing
  # add any other dependencies needed for your CLI
]
[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.12"]

[tool.ruff.lint]
preview = true

[tool.ruff.format]
preview = true

[tool.mypy]
follow_imports = "normal"
pretty = true
show_column_numbers = true
show_error_context = true
warn_no_return = false
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_unreachable = true
